// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveConfirmContent should match snapshot when shared info exists 1`] = `
<div>
  Are you sure you want to remove 
  <b>
    USD 3 months
  </b>
   from your list?
   This will remove the currency and tenor information from counterparties who have access to this information.
</div>
`;

exports[`RemoveConfirmContent should match snapshot when shared info is empty array 1`] = `
<div>
  Are you sure you want to remove 
  <b>
    USD 3 months
  </b>
   from your list?
</div>
`;
